Ingress/stddeployment.yml
apiVersion: apps/v1
kind:   Deployment
metadata: 
      name:  studentapp 
      labels: 
            app: studentapp
spec:
    replicas: 1   #desired state 
    strategy: 
        type: RollingUpdate
    template:
          metadata: 
                name: studentapp 
                labels:
                      app: studentapp
          spec:
              containers:
                  - name: http
                    image: pallavi1104/studentapp:latest
                    command:
                      - "/bin/bash" 
                      - "-c"
                      - "while true; do echo hello; sleep 10;done"
                    resources: 
                        requests:    #starting point of our pod's resouce
                          cpu: "25m"
                          memory: "50Mi"
                        limits:      #endpoint point of ours pod's resource
                          cpu: "50m"
                          memory: "100Mi"    
                    ports:
                        - name: http
                          containerPort: 80
                          protocol: TCP      
    selector:
        matchLabels:
            app: studentapp
