Ingress/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: studentsrv
spec:
  type: LoadBalancer
  selector:
    app: studentapp 
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
