Ingress/todoservice.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: todo
