Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ab204426436324e7cbf713091758a8a4-360169847.ap-south-1.elb.amazonaws.co
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: ftodo
                port:
                  number: 80
         -  path: /todo
            pathType: Prefix
            backend:
              service: 
                name: todo
                port:
                  number: 80
